# execurator

./: CMakeLists.txt  README.md  build.sh  index.html  main.c  run.sh  template.html
moc_project/: main.rd  test.rd
src/: main.c  parser.c  request_handler.c
src/include/: parser.h
templates/: _template.rd  _test_page.md  template.html
